Revision history for Math-Geometry-Construction

0.024	 
	 - Math::Geometry::Construction::Vector to unify access to
	   sources for "vector values"
	 - started using MooseX::Params::Validate
	 - docu enhancements

0.023	 Thu Apr  4 13:14:01 CEST 2013
	 PointOnCircle derivate

0.022	 Mon Mar 25 17:27:04 CET 2013
	 Fixed test suite to work with perl 5.17.

0.021	 Fri Mar 22 17:49:50 CET 2013 (unpublished)
	 - extreme_position selector accepts Line objects as
           direction
	 - support for setting dash patterns in a unified way for SVG
	   and TikZ output
	 - partial drawing of circles

0.020	 Sat Jan  7 15:36:16 NZDT 2012
	 - The extend attribute is turned into an array reference
	   with backward and forward extent. When setting the
	   attribute, this change is transparent since a value x is
	   coerced into [x, x]. However, when reading the value (not
	   a typical scenario), you get the array reference instead
	   of a single number.
	 - dabbling with operator overloading
	 - refactored and cleaned up test suite

0.019	 Sun Nov 20 12:19:09 NZDT 2011
	 - starting to use Moose types
	 - using coercion in order to accept Math::VectorReal
	   objects and array references as vectors; this means that
	   these types can now be used in mutators as well, not only
	   constructors

0.018	 Sat Nov 19 19:17:28 NZDT 2011
	 - bug fix: center and support of a Circle are made
	   readonly; of course, their positions can change, but the
	   point objects must stay the same, otherwise reuse of
	   circles will break
	 - result buffering to speed up large constructions

0.017	 Thu Nov 17 20:14:53 NZDT 2011
	 - find_or_add methods that allow the reuse of lines and
	   circles even if no reference or id has been kept

0.016	 Mon Nov 14 19:41:12 NZDT 2011
	 - fixed bug in SVG generation: if the transform attribute
	   was specified it leaked through to the SVG object and
	   made renderers choke
	 - the close_position and distant_position selectors now